feat : ImGuizmo 제거

--- a/TTALKKAK/TTALKKAK.vcxproj.filters
+++ b/TTALKKAK/TTALKKAK.vcxproj.filters
@@ -124,9 +124,6 @@
     <Filter Include="Engine\Source\Runtime\Engine\Classes\Components\GameFramework">
       <UniqueIdentifier>{37b438ba-687a-4ab8-b921-02ed2635d25b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\Source\ThirdParty\include\ImGuizmo">
-      <UniqueIdentifier>{e6aeb588-3bec-4485-8907-6d1da045ef14}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Source\Editor\PropertyEditor\IWindowToggleable.h">
@@ -510,25 +507,10 @@
     <ClInclude Include="Engine\Source\Runtime\Engine\Viewport.h" />
     <ClInclude Include="Engine\Source\Runtime\SlateCore\Layout\SlateRect.h" />
     <ClInclude Include="Engine\Source\Runtime\Engine\FBX\FBXDefine.h" />
-    <ClInclude Include="Engine\Source\Runtime\Launch\ImGuizmoManager.h" />
-    <ClInclude Include="Engine\Source\ThirdParty\include\ImGuizmo\GraphEditor.h">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Source\ThirdParty\include\ImGuizmo\ImCurveEdit.h">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Source\ThirdParty\include\ImGuizmo\ImGradient.h">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Source\ThirdParty\include\ImGuizmo\ImGuizmo.h">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Source\ThirdParty\include\ImGuizmo\ImSequencer.h">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClInclude>
-    <ClInclude Include="Engine\Source\ThirdParty\include\ImGuizmo\ImZoomSlider.h">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClInclude>
+    <ClInclude Include="Engine\Source\Editor\PropertyEditor\AnimTimelinePanel.h" />
+    <ClInclude Include="Engine\Source\Editor\UnrealEd\AnimationPreviewUI.h" />
+    <ClInclude Include="Engine\Source\Runtime\Engine\Classes\Actors\ACharacter.h" />
+    <ClInclude Include="Engine\Source\Runtime\Engine\Classes\Actors\APawn.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Source\ThirdParty\DirectXTK\Include\DDSTextureLoader.h" />
@@ -778,22 +760,10 @@
       <Filter>Engine\Source\Runtime\Core\Math</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Source\Runtime\Engine\FBX\FBXDefine.cpp" />
-    <ClCompile Include="Engine\Source\Runtime\Launch\ImGuizmoManager.cpp" />
-    <ClCompile Include="Engine\Source\ThirdParty\include\ImGuizmo\GraphEditor.cpp">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Source\ThirdParty\include\ImGuizmo\ImCurveEdit.cpp">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Source\ThirdParty\include\ImGuizmo\ImGradient.cpp">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Source\ThirdParty\include\ImGuizmo\ImGuizmo.cpp">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClCompile>
-    <ClCompile Include="Engine\Source\ThirdParty\include\ImGuizmo\ImSequencer.cpp">
-      <Filter>Engine\Source\ThirdParty\include\ImGuizmo</Filter>
-    </ClCompile>
+    <ClCompile Include="Engine\Source\Editor\PropertyEditor\AnimTimelinePanel.cpp" />
+    <ClCompile Include="Engine\Source\Editor\UnrealEd\AnimationPreviewUI.cpp" />
+    <ClCompile Include="Engine\Source\Runtime\Engine\Classes\Actors\ACharacter.cpp" />
+    <ClCompile Include="Engine\Source\Runtime\Engine\Classes\Actors\APawn.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\ShaderHeaders\GConstantBuffers.hlsli" />
