--- a/TTALKKAK/TTALKKAK.vcxproj.filters
+++ b/TTALKKAK/TTALKKAK.vcxproj.filters
@@ -488,7 +488,6 @@
     <ClInclude Include="Engine\Source\Runtime\Engine\Classes\Components\GameFramework\RotatingMovementComponent.h">
       <Filter>Engine\Source\Runtime\Engine\Classes\Components\GameFramework</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Source\Runtime\Engine\Classes\Animation\CustomAnimInstance.h" />
     <ClInclude Include="Engine\Source\Runtime\Core\Container\FFileHelper.h" />
     <ClInclude Include="Engine\Source\Runtime\Core\Container\Path.h" />
     <ClInclude Include="Engine\Source\Runtime\Core\Container\StringConv.h" />
@@ -520,6 +519,9 @@
     <ClInclude Include="Engine\Source\ThirdParty\im-neo-sequencer\imgui_neo_sequencer.h">
       <Filter>Engine\Source\ThirdParty\im-neo-sequencer</Filter>
     </ClInclude>
+    <ClInclude Include="Engine\Source\Runtime\Engine\Classes\Animation\AnimationSettings.h" />
+    <ClInclude Include="Engine\Source\Runtime\Engine\Classes\Animation\BlendAnimInstance.h" />
+    <ClInclude Include="Engine\Source\Runtime\Engine\UserInterface\Stat.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Source\ThirdParty\DirectXTK\Include\DDSTextureLoader.h" />
@@ -748,7 +750,6 @@
     <ClCompile Include="Engine\Source\Runtime\Engine\Classes\Components\GameFramework\RotatingMovementComponent.cpp">
       <Filter>Engine\Source\Runtime\Engine\Classes\Components\GameFramework</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Source\Runtime\Engine\Classes\Animation\CustomAnimInstance.cpp" />
     <ClCompile Include="Engine\Source\Runtime\Core\Container\FFileHelper.cpp" />
     <ClCompile Include="Engine\Source\Runtime\Core\Container\Path.cpp" />
     <ClCompile Include="Engine\Source\Runtime\Core\Math\FrameRate.cpp" />
@@ -779,6 +780,9 @@
     <ClCompile Include="Engine\Source\ThirdParty\im-neo-sequencer\imgui_neo_sequencer.cpp">
       <Filter>Engine\Source\ThirdParty\im-neo-sequencer</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Source\Runtime\Engine\Classes\Animation\AnimationSettings.cpp" />
+    <ClCompile Include="Engine\Source\Runtime\Engine\Classes\Animation\BlendAnimInstance.cpp" />
+    <ClCompile Include="Engine\Source\Runtime\Engine\UserInterface\Stat.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\ShaderHeaders\GConstantBuffers.hlsli" />
